# fluent-rs

./: Cargo.toml
fluent-bundle/: Cargo.toml
fluent-bundle/examples/: custom_formatter.rs  custom_type.rs
fluent-bundle/src/: args.rs  bundle.rs  concurrent.rs  entry.rs  errors.rs  lib.rs  memoizer.rs  message.rs  resolve.rs  resource.rs
fluent-bundle/src/resolver/: expression.rs  inline_expression.rs  mod.rs  pattern.rs  scope.rs
fluent-bundle/src/types/: mod.rs  number.rs
fluent-bundle/tests/: bundle.rs  custom_types.rs  resolver.rs  resource.rs
fluent-fallback/: Cargo.toml
fluent-fallback/benches/: localization.rs  scenarios.rs
fluent-fallback/examples/: simple-fallback.rs
fluent-fallback/src/: asynchronous.rs  errors.rs  generator.rs  lib.rs  localization.rs  localization2.rs
fluent-fallback/src/testing/: generator.rs  mod.rs
fluent-fallback/tests/: localization_async_test.rs  localization_test.rs  scenarios.rs
fluent-io/: Cargo.toml
fluent-io/src/: cache.rs  lib.rs  value.rs
fluent-resmgr/: Cargo.toml
fluent-resmgr/examples/: provider.rs  simple-resmgr.rs  static.rs
fluent-resmgr/src/: errors.rs  fetcher.rs  iter.rs  lib.rs  manager.rs  static.rs
fluent-resmgr/tests/: localization_test.rs
fluent-syntax/: Cargo.toml  temp.diff  test.ftl
fluent-syntax/benches/: lexer.rs  parser.rs
fluent-syntax/src/: ast.rs
fluent-syntax/src/ast/: helper.rs
fluent-syntax/src/json/: mod.rs
fluent-syntax/src/parser/: errors.rs  lexer.rs  mod.rs  parser.rs  slice.rs
fluent-syntax/tests/: parser_fixtures.rs
fluent-syntax/tests/ast/: mod.rs
fluent-syntax/tests/lexer/fixtures/: menubar.json  simple.json
intl-memoizer/examples/: numberformat.rs  pluralrules.rs
intl-memoizer/src/: concurrent.rs  lib.rs
