[package]
name = "fluent-fallback"
description = """
High-level abstraction model for managing localization resources
and runtime localization lifecycle.
"""
version = "0.0.4"
edition = "2018"
authors = [
    "Zibi Braniecki <gandalf@mozilla.com>",
    "Staś Małolepszy <stas@mozilla.com>"
]
homepage = "http://www.projectfluent.org"
license = "Apache-2.0/MIT"
repository = "https://github.com/projectfluent/fluent-rs"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]

[dependencies]
chunky-vec = "0.1"
fluent-bundle = { version = "0.13", path = "../fluent-bundle" }
futures = "0.3"
pin-cell = { git = "https://github.com/withoutboats/pin-cell", rev = "4d5803d83c6b3bffd62c9e73a0ceaf5ec6f01495" }
unic-langid = { version = "0.9", features = ["macros"] }
tokio = { version = "1.0", optional = true, features = ["rt-multi-thread"] }
once_cell = "1.5"
fluent-testing = { path = "../fluent-testing", optional = true }

[dev-dependencies]
fluent-langneg = "0.13"
criterion = "0.3"

[features]
default = []
testing = ["fluent-testing"]

[[bench]]
name = "scenarios"
harness = false
required-features = ["testing"]

[[test]]
name = "scenarios"
required-features = ["testing"]
