[package]
name = "fluent-resmgr"
description = """
Resource manager for Fluent localization resources.
"""
version = "0.0.4"
authors = [
    "Zibi Braniecki <gandalf@mozilla.com>",
    "Staś Małolepszy <stas@mozilla.com>"
]
edition = "2018"
homepage = "http://www.projectfluent.org"
license = "Apache-2.0/MIT"
repository = "https://github.com/projectfluent/fluent-rs"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]

[dependencies]
fluent-bundle = { path = "../fluent-bundle" }
fluent-syntax = { version = "0.10" }
unic-langid = "0.9"
fluent-fallback = { version = "0.0.4", path = "../fluent-fallback" }
fluent-io = { path = "../fluent-io" }
futures = "0.3"
tokio = { version = "1.0", features = ["fs", "rt-multi-thread", "macros"] }
async-trait = "0.1"

[dev-dependencies]
unic-langid = { version = "0.9", features = ["macros"]}
fluent-langneg = "0.13"
